--- a/nd4j-parameter-server-parent/nd4j-parameter-server/pom.xml
+++ b/nd4j-parameter-server-parent/nd4j-parameter-server/pom.xml
@@ -137,6 +137,13 @@
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native</artifactId>
+            <version>${project.version}</version>
+            <classifier>${javacpp.platform}</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.nd4j</groupId>
             <artifactId>nd4j-aeron</artifactId>
             <version>${project.version}</version>
         </dependency>
