--- a/nd4j-serde/nd4j-aeron/pom.xml
+++ b/nd4j-serde/nd4j-aeron/pom.xml
@@ -57,6 +57,13 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+        <groupId>org.nd4j</groupId>
+        <artifactId>nd4j-native</artifactId>
+        <version>${project.version}</version>
+        <classifier>${javacpp.platform}</classifier>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.nd4j</groupId>
       <artifactId>nd4j-api</artifactId>
       <version>${nd4j.version}</version>
