Initial drop of cuda lapack - sample sgetrf

--- a/nd4j-backends/nd4j-backend-impls/nd4j-cuda/pom.xml
+++ b/nd4j-backends/nd4j-backend-impls/nd4j-cuda/pom.xml
@@ -203,5 +203,10 @@
             <scope>test</scope>
         </dependency>
 
+ <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>cuda</artifactId>
+            <version>8.0-1.2</version>
+        </dependency>
     </dependencies>
 </project>
