--- a/deeplearning4j-scaleout/spark/dl4j-spark/pom.xml
+++ b/deeplearning4j-scaleout/spark/dl4j-spark/pom.xml
@@ -130,7 +130,7 @@
 
         <dependency>
             <groupId>org.deeplearning4j</groupId>
-            <artifactId>deeplearning4j-play</artifactId>
+            <artifactId>deeplearning4j-play_2.10</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
