UI - fixes for Spark
Former-commit-id: e27307f7a7c467a3311ef6393d634865712eaa96 [formerly 6992a48195dd68d0be074da85c692848aabff9e4]
Former-commit-id: 4c52c9b01ec8327c7d22bf473639b977afc4b901

--- a/deeplearning4j-ui-parent/deeplearning4j-ui/pom.xml
+++ b/deeplearning4j-ui-parent/deeplearning4j-ui/pom.xml
@@ -37,6 +37,50 @@
         </plugins>
     </build>
 
+
+    <dependencyManagement>
+        <dependencies>
+
+            <!-- Jackson Core -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.4.4</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.4.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.4.4</version>
+            </dependency>
+
+            <!-- Jackson Module -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-scala_2.10</artifactId>
+                <version>2.4.4</version>
+            </dependency>
+
+            <!-- Jackson Datatype -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jdk8</artifactId>
+                <version>2.4.4</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>2.4.4</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.deeplearning4j</groupId>
