--- a/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
@@ -38,8 +38,6 @@
             <version>${reflections.version}</version>
         </dependency>
 
-
-
         <!-- ///////////////// Jackson Dependencies ///////////////// -->
         <!-- Here: forcing all Jackson versions to match Spark versions. Otherwise, Spark may override some Jackson dependencies
         with 2.4.4, but not all of them - resulting in dependency issues. Play framework seems OK using this version of Jackson
@@ -82,6 +80,16 @@
             <version>${spark.jackson.version}</version>
         </dependency>
 
+
+        <!-- Promote com.typesafe.config to a direct dependency -->
+        <!-- This is a dependency for both Spark (1.2.1 for Spark 1.6.0, as a transitive dependency via Akka) and for
+             Play (1.3.0). Play requires 1.3.0 (fails with 1.2.1 - missing required methods), but Spark can use 1.3.0.
+             By promoting this to a direct dependency, we are more likely to resolve 1.3.0 over Spark's 1.2.1 -->
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>${typesafe.config.version}</version>
+        </dependency>
 
 
         <!-- Test Scope Dependencies -->
