cmake changes for gemm on power8

--- a/blas/CMakeLists.txt
+++ b/blas/CMakeLists.txt
@@ -22,7 +22,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3 -Wl,-rpath,$ORIGIN/")
 IF(${ARCH} MATCHES "arm*")
     set(ARCH_TUNE "-march=${ARCH}")
 ELSEIF(${ARCH} MATCHES "power*")
-    set(ARCH_TUNE "-mcpu=${ARCH} -mtune=${ARCH}")
+    set(ARCH_TUNE "-mcpu=${ARCH} -mtune=${ARCH} -D__POWER")
 ELSE()
     set(ARCH_TUNE "-march=${ARCH} -mtune=${ARCH}")
 ENDIF()
