Test forcing akka versions for spark compatibility
Former-commit-id: 5f73075a07ef4b5b36c561438fb7d25ce809c45f

--- a/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
@@ -92,6 +92,25 @@
         </dependency>
 
 
+        <!-- Test forcing akka versions: -->
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.10</artifactId>
+            <version>2.3.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-remote_2.10</artifactId>
+            <version>2.3.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-slf4j_2.10</artifactId>
+            <version>2.3.11</version>
+        </dependency>
+
         <!-- Test Scope Dependencies -->
         <dependency>
             <groupId>junit</groupId>
