--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>datavec-spark</module>
         <module>datavec-camel</module>
         <module>datavec-dataframe</module>
+        <module>datavec-local</module>
     </modules>
     <name>DataVec</name>
 
