some tests pass

--- a/nd4j-backends/nd4j-backend-impls/nd4j-cuda/src/main/resources/nd4j-jcublas.properties
+++ b/nd4j-backends/nd4j-backend-impls/nd4j-cuda/src/main/resources/nd4j-jcublas.properties
@@ -36,3 +36,4 @@ resourcemanager_state = true
 alloc = direct
 fft = org.nd4j.linalg.jcublas.fft.JcudaFft
 opexec.mode= native
+random=org.nd4j.linalg.jcublas.rng.CudaNativeRandom
