--- a/deeplearning4j-scaleout/pom.xml
+++ b/deeplearning4j-scaleout/pom.xml
@@ -31,5 +31,6 @@
 		<module>dl4j-streaming</module>
 		<module>deeplearning4j-aws</module>
 		<module>spark</module>
+        <module>deeplearning4j-scaleout-parallelwrapper</module>
     </modules>
 </project>
