add multi threaded support

--- a/nd4j-serde/nd4j-aeron/pom.xml
+++ b/nd4j-serde/nd4j-aeron/pom.xml
@@ -76,7 +76,7 @@
     <dependency>
       <groupId>uk.co.real-logic</groupId>
       <artifactId>sbe-all</artifactId>
-      <version>1.5.1</version>
+      <version>${sbe.version}</version>
     </dependency>
   </dependencies>
 </project>
