--- a/nd4j-backends/nd4j-backend-impls/nd4j-native/pom.xml
+++ b/nd4j-backends/nd4j-backend-impls/nd4j-native/pom.xml
@@ -46,8 +46,7 @@
         <dependency>
             <groupId>org.bytedeco.javacpp-presets</groupId>
             <artifactId>openblas</artifactId>
-<!--            <version>${javacpp.version}-1.2</version> -->
-            <version>0.2.19-1.2.5-SNAPSHOT</version> 
+            <version>0.2.19-1.2</version> 
         </dependency>
     </dependencies>
 
