--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,7 @@
         <profile>
             <id>testresources</id>
             <activation>
-                <!--<activeByDefault>false</activeByDefault>-->
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <dependencies>
                 <dependency>
