First pass on same convolution mode support
Former-commit-id: ecf22b9ecef08e781c75fb417c41205fb8b5690b [formerly e4533d044c4d0380e5bfdf7091824bbc656c6597]
Former-commit-id: b8ab81df1fca03622990286589f43a9a441f7ccc

--- a/deeplearning4j-core/pom.xml
+++ b/deeplearning4j-core/pom.xml
@@ -115,7 +115,7 @@
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-cuda-8.0</artifactId>
+            <artifactId>nd4j-native</artifactId>
         </dependency>
 
         <dependency>
