Fix pom.xml for release
Former-commit-id: b1ad6267fbe732afda226d8dd43588d8b7831aa0

--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>LATEST</version>
+                        <version>1.5</version>
                         <configuration>
                             <passphrase>${gpg.passphrase}</passphrase>
                         </configuration>
