Increase maximum post size in UI
Former-commit-id: e28dfb73f5d33394745a8a9bfa814f36e86d2f7d

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/application.conf
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/application.conf
@@ -348,3 +348,8 @@ db {
 }
 
 jpa.default=defaultPersistenceUnit
+
+
+#Increase default maximum post length - used for remote listener functionality
+#Can get response 413 with larger networks without setting this
+parsers.text.maxLength=10M
