--- a/nd4j-jdbc/nd4j-jdbc-api/pom.xml
+++ b/nd4j-jdbc/nd4j-jdbc-api/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>org.nd4j</groupId>
     <artifactId>nd4j-jdbc-api</artifactId>
-    <version>0.6.1-SNAPSHOT</version>
+    <version>0.7.0</version>
     <packaging>jar</packaging>
 
     <name>nd4j-jdbc-api</name>
@@ -31,7 +31,7 @@
     <parent>
         <groupId>org.nd4j</groupId>
         <artifactId>nd4j-jdbc</artifactId>
-        <version>0.6.1-SNAPSHOT</version>
+        <version>0.7.0</version>
     </parent>
 
     <properties>
