--- a/nd4j-shade/pom.xml
+++ b/nd4j-shade/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>nd4j</artifactId>
         <groupId>org.nd4j</groupId>
-        <version>0.6.1-SNAPSHOT</version>
+        <version>0.7.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
