--- a/rl4j-core/pom.xml
+++ b/rl4j-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>rl4j</artifactId>
         <groupId>org.deeplearning4j</groupId>
-        <version>0.7.0</version>
+        <version>0.7.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>rl4j-core</artifactId>
