fix japanese(kuromoji) nlp test

--- a/deeplearning4j-nlp-parent/deeplearning4j-nlp-japanese/pom.xml
+++ b/deeplearning4j-nlp-parent/deeplearning4j-nlp-japanese/pom.xml
@@ -41,6 +41,11 @@
             <version>${randomizedtesting.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
     </dependencies>
 
 
