--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,10 @@
             <id>eraly</id>
             <name>Susan Eraly</name>
         </developer>
+        <developer>
+            <id>kepricon</id>
+            <name>Daehyun Kim</name>
+        </developer>
         <!--current & previous core contributers and company developers-->
         <developer>
             <id>smarthi</id>
