--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,15 @@
                 <os.arch>x86_64</os.arch>
             </properties>
         </profile>
+        <profile>
+            <id>arm</id>
+            <activation>
+                <os><arch>arm</arch></os>
+            </activation>
+            <properties>
+                <os.arch>arm</os.arch>
+            </properties>
+        </profile>
 
         <profile>
             <id>release-sign-artifacts</id>
