add new numeric columns for long,int and double

--- a/datavec-dataframe/pom.xml
+++ b/datavec-dataframe/pom.xml
@@ -153,7 +153,11 @@
             <version>3.0.1</version>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
