Configure surefire version classpath; add logging configuration for DL4J streaming
Former-commit-id: bad39d15bd8d6d815edb3f193e23604fade65efd [formerly e3f646e2cc3cd003eeb5ea51844c47dc252cdf6e]
Former-commit-id: 0319f2f4e282f57b7c445940c6e288449e97a1fe

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
         <sbt-compiler-maven-plugin.version>1.0.0-beta8</sbt-compiler-maven-plugin.version>
         <maven-build-helper-plugin.version>1.12</maven-build-helper-plugin.version>
         <maven-play2-plugin.version>1.0.0-beta5</maven-play2-plugin.version>
+        <maven-surefire.version>2.18.1</maven-surefire.version>
     </properties>
 
     <profiles>
@@ -421,11 +422,19 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.18.1</version>
-                    <!--                    <configuration>
-                                            <argLine>-Ddtype=double -Xmx3024m -Xms3024m</argLine>
-                                        </configuration> -->
-
+                    <version>${maven-surefire.version}</version>
+                    <configuration>
+                        <!--
+                         By default: Surefire will set the classpath based on the manifest. Because tests are not included
+                         in the JAR, any tests that rely on class path scanning for resources in the tests directory will not
+                         function correctly without this configuratino.
+                         For example, tests for custom layers (where the custom layer is defined in the test directory)
+                         will fail due to the custom layer not being found on the classpath.
+                         http://maven.apache.org/surefire/maven-surefire-plugin/examples/class-loading.html
+                         -->
+                        <useSystemClassLoader>true</useSystemClassLoader>
+                        <useManifestOnlyJar>false</useManifestOnlyJar>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
