--- a/deeplearning4j-scaleout/dl4j-streaming/pom.xml
+++ b/deeplearning4j-scaleout/dl4j-streaming/pom.xml
@@ -22,6 +22,13 @@
     <url>http://www.deeplearning4j.org</url>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.datavec</groupId>
+            <artifactId>datavec-camel</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-csv</artifactId>
