--- a/deeplearning4j-cuda/pom.xml
+++ b/deeplearning4j-cuda/pom.xml
@@ -49,6 +49,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-cuda-${cuda.version}</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
