--- a/pom.xml
+++ b/pom.xml
@@ -59,10 +59,31 @@
         <nd4j.version>0.7.1-SNAPSHOT</nd4j.version>
         <dl4j.version>0.7.1-SNAPSHOT</dl4j.version>
         <javacv.version>1.2</javacv.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <logback.version>1.1.2</logback.version>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>${logback.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-core</artifactId>
+				<version>${logback.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -71,7 +92,6 @@
             <version>1.16.10</version>
             <scope>provided</scope>
         </dependency>
-
     </dependencies>
 
     <build>
