--- a/rl4j-gym/pom.xml
+++ b/rl4j-gym/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>gym-java-client</artifactId>
-            <version>${dl4j.version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
