--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>datavec-data</module>
         <module>datavec-hadoop</module>
         <module>datavec-spark</module>
+        <module>datavec-spark2</module>
         <module>datavec-camel</module>
         <module>datavec-dataframe</module>
         <module>datavec-local</module>
