add new status server module

--- a/pom.xml
+++ b/pom.xml
@@ -259,7 +259,14 @@
     </modules>
 
     <properties>
-        <playframework.version>2.5.8</playframework.version>
+        <mapdb.version>3.0.2</mapdb.version>
+        <maven-scala-plugin.version>2.15.2</maven-scala-plugin.version>
+        <maven-resources-plugin.version>3.0.1</maven-resources-plugin.version>
+        <sbt-compiler-maven-plugin.version>1.0.0-beta8</sbt-compiler-maven-plugin.version>
+        <maven-build-helper-plugin.version>1.12</maven-build-helper-plugin.version>
+        <maven-play2-plugin.version>1.0.0-beta5</maven-play2-plugin.version>
+        <jcommander.version>1.27</jcommander.version>
+        <playframework.version>2.4.6</playframework.version>
         <lombok.version>1.16.10</lombok.version>
         <jackson.version>2.5.1</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
